Refactor CSS styles for improved consistency and performance. Removed unused variables, optimized transitions, and updated button styles. Introduced new styles for AI virtual consultant section, enhancing layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="New Real Bridal Studio - Luxury bridal services including makeup, mehndi, and outfits for your special day">
     <meta name="keywords" content="bridal makeup, luxury bridal, wedding makeup, bridal mehndi, saree draping, bridal salon, wedding services">
     <meta name="author" content="New Real Bridal Studio">
